// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expandable has the .open class 1`] = `
<aside
  className="wrapper"
  role="region"
>
  <button
    aria-expanded={true}
    aria-label="Test"
    className="open activator"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <Element
      SEO={false}
      className="title"
      level="h5"
    >
      Test
    </Element>
    <ChevronIcon
      aria-hidden="true"
      className="icon"
      focusable="false"
    />
  </button>
  <AnimateHeight
    animateOpacity={false}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={300}
    easing="ease"
    height="auto"
    style={Object {}}
  >
    <section
      className="content"
    >
      <p>
        Test Body
      </p>
    </section>
  </AnimateHeight>
</aside>
`;

exports[`Expandable renders 1`] = `
<aside
  className="wrapper"
  role="region"
>
  <button
    aria-expanded={false}
    aria-label="Test"
    className="activator"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <Element
      SEO={false}
      className="title"
      level="h5"
    >
      Test
    </Element>
    <ChevronIcon
      aria-hidden="true"
      className="icon"
      focusable="false"
    />
  </button>
  <AnimateHeight
    animateOpacity={false}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={300}
    easing="ease"
    height={0}
    style={Object {}}
  >
    <section
      className="content"
    >
      <p>
        Test Body
      </p>
    </section>
  </AnimateHeight>
</aside>
`;
